aks/monitoring/templates/monitoring-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
  namespace: istio-system
spec:
  hosts:
    - "vtch-aks-demo-monitoring.duckdns.org"
  gateways:
    - monitoring-gateway
  http:
    - headers:
        request:
          set:
            X-Forwarded-Port: '443'
      match:
        - uri:
            prefix: "/kiali"
      route:
        - destination:
            port:
              number: 20001
            host: kiali
    - match:
        - uri:
            prefix: "/jaeger"
      route:
        - destination:
            port:
              number: 80
            host: tracing
    - match:
        - uri:
            prefix: "/api/v2"
      route:
        - destination:
            port:
              number: 9411
            host: zipkin
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 3000
            host: grafana
